# audio-project

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
config/: receiver.yaml  sender.yaml
src/intercom/receiver/: main.py
src/intercom/receiver/api/: app.py  control.py  mic_ingest.py  schemas.py
src/intercom/receiver/api/static/: app.js  index.html  pcm-worklet.js
src/intercom/receiver/audio/: gst_pipeline.py  receiver.py
src/intercom/sender/: main.py
src/intercom/sender/audio/: gst_pipeline.py  sender.py
src/intercom/shared/: config.py  constants.py  exceptions.py  service.py
src/intercom_receiver/: __init__.py  config.py  logger.py  main.py  pyproject.toml
src/intercom_receiver/audio/: __init__.py  get_pipeline.py  receiver.py
tests/: test_config.py  test_control.py  test_logger.py  test_service.py
