[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "intercom"
version = "0.1.0"
description = "Network audio intercom"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn",
    "pyyaml",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
intercom-receiver = "intercom.receiver.main:main"
intercom-sender = "intercom.sender.main:main"